# CookieClicker

./: CMakeLists.txt  README.md
include/: BaseValues.hpp  PCH.hpp  Utilities.hpp
include/Core/: Application.hpp  EventManager.hpp  EventSystem.hpp  GUIBase.hpp  GUIManager.hpp  GameValues.hpp  GameWindow.hpp  Layer.hpp  LayerManager.hpp  ResourceManager.hpp  Scene.hpp  WidgetBuilders.hpp  Window.hpp
include/Game/: CCMainGUI.hpp  CCMainScene.hpp  GameManager.hpp
include/Shaders/: Shaders.hpp
include/Utility/: HelperMacros.hpp  Macros.hpp  NumberGenerator.hpp  UtilityFunctions.hpp
include/core/: Application.hpp  ResourceManager.hpp  Window.hpp
include/scenes/: BaseScene.hpp  Layer.hpp
include/shapes/: Drawable.hpp  GameObject2D.hpp  Object2D.hpp  RectangleShape.hpp  Transform2D.hpp
include/utility/: GameValueDefines.hpp
include/utility/OpenGLUtilities/: Camera.hpp  Shader.hpp  Texture.hpp  VertexBuffer2D.hpp
resources/GUI/: MainGUI.txt
src/: CMakeLists.txt  main.cpp
src/Core/: Application.cpp  CMakeLists.txt  EventManager.cpp  EventSystem.cpp  GUIBase.cpp  GUIManager.cpp  GameWindow.cpp  Layer.cpp  LayerManager.cpp  ResourcesManager.cpp  Scene.cpp  Window.cpp
src/Game/: CCMainGUI.cpp  CCMainScene.cpp  CMakeLists.txt  GameManager.cpp
src/core/: Application.cpp  CMakeLists.txt  ResourceManager.cpp  Window.cpp
src/scenes/: BaseScene.cpp  CMakeLists.txt  Layer.cpp
src/shapes/: CMakeLists.txt  GameObject2D.cpp  Object2D.cpp  RectangleShape.cpp  Transform2D.cpp
src/utility/: CMakeLists.txt
src/utility/OpenGLUtilities/: CMakeLists.txt  Camera.cpp  Shader.cpp  Texture.cpp  VertexBuffer2D.cpp
